Add checkboxes for shirts!

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello World</h1>
+<h1>Lewis' Uniform Selection!</h1>
+
+<form>
+  <div class="form-check">
+    <h3>Shirts Available:</h3>
+    <input class="form-check-input" type="checkbox" value="blueShirt" id="blueShirt">
+    <label class="form-check-label" for="blueShirt">Blue</label>
+    <input class="form-check-input" type="checkbox" value="burgandyShirt" id="burgandyShirt">
+    <label class="form-check-label" for="burgandyShirt">Burgandy</label>
+    <input class="form-check-input" type="checkbox" value="whiteShirt" id="whiteShirt">
+    <label class="form-check-label" for="whiteShirt">White</label>
+  </div>
+</form>
