--- a/index.html
+++ b/index.html
@@ -10,4 +10,12 @@
     <input class="form-check-input" type="checkbox" value="whiteShirt" id="whiteShirt">
     <label class="form-check-label" for="whiteShirt">White</label>
   </div>
+
+  <div class="form-check">
+    <h3>Pants Available:</h3>
+    <input class="form-check-input" type="checkbox" value="bluePants" id="bluePants">
+    <label class="form-check-label" for="bluePants">Blue</label>
+    <input class="form-check-input" type="checkbox" value="brownPants" id="brownPants">
+    <label class="form-check-label" for="brownPants">Brown</label>    
+  </div>
 </form>
