Fix formatting for checkboxes

--- a/index.html
+++ b/index.html
@@ -9,22 +9,28 @@
   <h1>Lewis' Uniform Selection!</h1>
 
   <form>
+    <h3>Shirts Available:</h3>
     <div class="form-check">
-      <h3>Shirts Available:</h3>
       <input class="form-check-input" type="checkbox" value="blueShirt" id="blueShirt">
       <label class="form-check-label" for="blueShirt">Blue</label>
+    </div>
+    <div class="form-check">
       <input class="form-check-input" type="checkbox" value="burgandyShirt" id="burgandyShirt">
       <label class="form-check-label" for="burgandyShirt">Burgandy</label>
+    </div>
+    <div class="form-check">
       <input class="form-check-input" type="checkbox" value="whiteShirt" id="whiteShirt">
       <label class="form-check-label" for="whiteShirt">White</label>
     </div>
 
+    <h3>Pants Available:</h3>
     <div class="form-check">
-      <h3>Pants Available:</h3>
       <input class="form-check-input" type="checkbox" value="bluePants" id="bluePants">
       <label class="form-check-label" for="bluePants">Blue</label>
+    </div>
+    <div class="form-check">
       <input class="form-check-input" type="checkbox" value="brownPants" id="brownPants">
-      <label class="form-check-label" for="brownPants">Brown</label>    
+      <label class="form-check-label" for="brownPants">Brown</label>
     </div>
   </form>
   </body>
