--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <html>
-  <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-          rel="stylesheet" 
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-          crossorigin="anonymous">
-  </head>
-  <body>
-  <h1>Lewis' Uniform Selection!</h1>
 
-  <form>
-    <h3>Shirts Available:</h3>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="blueShirt" id="blueShirt">
-      <label class="form-check-label" for="blueShirt">Blue</label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="burgandyShirt" id="burgandyShirt">
-      <label class="form-check-label" for="burgandyShirt">Burgandy</label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="whiteShirt" id="whiteShirt">
-      <label class="form-check-label" for="whiteShirt">White</label>
-    </div>
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
 
-    <h3>Pants Available:</h3>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="bluePants" id="bluePants">
-      <label class="form-check-label" for="bluePants">Blue</label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="brownPants" id="brownPants">
-      <label class="form-check-label" for="brownPants">Brown</label>
-    </div>
-  </form>
-  </body>
+<body>
+  <div class="container">
+    <h1>Lewis' Uniform Selection!</h1>
+
+    <form>
+      <h3>Shirts Available:</h3>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="blueShirt" id="blueShirt">
+        <label class="form-check-label" for="blueShirt">Blue</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="burgandyShirt" id="burgandyShirt">
+        <label class="form-check-label" for="burgandyShirt">Burgandy</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="whiteShirt" id="whiteShirt">
+        <label class="form-check-label" for="whiteShirt">White</label>
+      </div>
+
+      <h3>Pants Available:</h3>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="bluePants" id="bluePants">
+        <label class="form-check-label" for="bluePants">Blue</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="brownPants" id="brownPants">
+        <label class="form-check-label" for="brownPants">Brown</label>
+      </div>
+
+      <div class="row">
+        <div class="col-auto">
+          <button type="submit" class="btn btn-primary">Choose!</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
+</body>
+
 </html>
