Bug: fix when no shirts selected

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   };
   
   function generateFit(shirts, pants, tries) {
-    if (shirts.lenght == 0 || pants.length == 0) {
+    if (shirts.length == 0 || pants.length == 0) {
       return "TIME TO DO LAUNDRY!!";
     }
     let randomShirt = Math.floor(Math.random() * shirts.length);
