--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -50,11 +51,11 @@
 (function() {
   let form = document.querySelector('form');
   let submitButton = form.querySelector('button');
-  submitButton.onclick = function(e) {
-    document.getElementById('your-fit').textContent = '';
+  submitButton.onclick = function(e) {    
+    document.getElementById('your-fit').textContent = '';    
     let availableShirts = Array.from(form.querySelectorAll('input[name="shirts[]"]:checked')).map(inp => inp.value);
     let availablePants = Array.from(form.querySelectorAll('input[name="pants[]"]:checked')).map(inp => inp.value);
-    let fit = generateFit(availableShirts, availablePants, 0);
+    let fit = generateFit(availableShirts, availablePants);
     document.getElementById('your-fit').textContent = fit;
     e.preventDefault();
   };
@@ -68,9 +69,13 @@
     let selectedShirt = shirts[randomShirt];
     let selectedPant = pants[randomPant];
     if (selectedShirt == selectedPant) {
-      if (tries == 10) {
-        return "Couldn't find a good fit. Try again!"
-      } else {
+      // if we get blue/blue, and brown is available, flip a coin to see if we switch to blue/brown
+      if (pants.includes('Brown') && Math.floor(Math.random() * 2) == 1) {
+        selectedPant = 'Brown';
+      } else if (tries == 10) {
+        return "Couldn't find a good fit. Try again!";
+      } else {        
+        tries = tries || 0;
         return generateFit(shirts, pants, tries + 1); //try again if we get blue/blue
       }            
     }
